Added an enter button and disigned the input box

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
     <section>
         <input type="text" placeholder="enter actor name">
-        <p id="demo"></p>    
+        <button>ENTER</button>
+        <!-- <p id="demo"></p>     -->
     </section>
     <aside>
-        <h2>Find your favorite actor</h2>
+        <h2>Discover all movies/shows of your favorite actors!</h2>
         <p>Search for any of your favorite actors. 
            Review and preview your favorite actor's movies and shows.
            Just one click, type in the person's name and discover 
