adding the api and key

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./assets/styles.css" />
-    <link href="http://www.omdbapi.com/?apikey=[yourkey]&"/> 
-    <link href="http://img.omdbapi.com/?apikey=[yourkey]&"/>
-
     <title>ActorPedia</title>
 </head>
 <body>
@@ -29,6 +26,7 @@
             which movies and shows you have been missing out on of your favorite actor.
         </p>
     </aside>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
 
